examples/test/testpolicy19889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19889
  namespace: namespace203
spec:
  podSelector:
    matchLabels:
      key12: value0
      key20: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value32
          key46: value30
          key18: value11
      podSelector:
        matchLabels:
          key9: value33
